--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,9 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
